reportbug (2.64) unstable; urgency=low

  * Fix incorrect detection of some uninstalled binaries as source
    packages.  (Closes: #259001)

  --

reportbug (2.63) unstable; urgency=low

  * Refactor email and signing code into a separate module.  Thanks to Ha
    Shao for doing most of the work.
  * Submit-As headers are now treated as a special case of Report-With.
    (Closes: #257546)
  * reportbug_ui_text.ewrite() now flushes output.  (Closes: #257534)
  * Make things more POSIXly-sound.  (Closes: #256101)

 -- Chris Lawrence <lawrencc@debian.org>  Sun,  4 Jul 2004 07:54:29 -0500

reportbug (2.62) unstable; urgency=low

  * Cope better with Origin fields in Packages file, since there seem to
    be a lot more coming through now.  (Closes: #255754)
  * Remove severity-inflation reduction code in novice mode; it was too
    confusing, apparently.  Maybe reportbug should just refuse to run in
    novice mode... (Closes: #254327, #255479)
  * Don't include severity info or other cruft in bug followups.
    (Closes: #255550)
  * Hide sid tag, as it's not generally useful for end users.
    (Closes: #252275)
  * keyid was left out of CONFIG_ARGS accidentally.  (Closes: #255044)
  * Just because debsums can't read a file doesn't stop reportbug from
    working (unless you tell it to stop).  (Closes: #250397)
  * Fix undefined locals when --package-version is used.  (Closes: #254818)
  * Barf if no subject is found after calling the editor.
    (Closes: #254687)
  * Fix choose mailer menu.  (Closes: #253003)

 -- Chris Lawrence <lawrencc@debian.org>  Tue, 22 Jun 2004 17:53:43 -0500

reportbug (2.61) unstable; urgency=low

  * Add support for the "report-with" header in bug control files.  Thanks
    to Chris Halls and Andrew McMillan for the idea and implementation.
    (Closes: #251327)
  * Convert README.developers to Unicode UTF-8.
  * Convert maintainer fields from UTF-8 to local character set.
    (Closes: #244478)